# StochLib

./: .Rhistory  .gitignore  CMakeLists.txt  Makefile  README  Rside.sh  StochLib Test.R  cmake_install.cmake  g++  parallelTest.R
PyStochLib/: CMakeLists.txt  Makefile  Makevars.in  PyStochLib.cpp  cmake_install.cmake  counting.txt  install.sh  makefile
PyStochLib/PyStochLib/: StochKitPlot.py  __init__.py
PyStochLib/StochLib/: __init__.py
PyStochLib/src/: DriverDecs.h  Model.cpp  Model.h  Output.h  PyStochLib.cpp  RStochLib.cpp  SSADirectSerial.cpp  StochLib.h  install.sh  makefile
StochLib/: CMakeLists.txt  DESCRIPTION  Makefile  NAMESPACE  cmake_install.cmake  configure  model.txt
StochLib/R/: histogramDistance.R  plotHistogram.R  plotStats.R  plotTrajectories.R  zzz.R
StochLib/src/: CommandLineInterface.cpp  CommandLineInterface.h  CommandLineInterface2.cpp  CustomPropensity.h  DriverDecs.h  (+47 more)
src/: BinHeap.cpp  BinHeap.h  ChangeParameterEventAction.h  ChangeSingleSpeciesEventAction.h  CommandLineInterface.cpp  CommandLineInterface.h  ConstantTimeGroup.cpp  ConstantTimeGroup.h  ConstantTimeGroupCollection.cpp  ConstantTimeGroupCollection.h  CustomStateBasedTrigger.h  DriverDecs.h  HistogramSingle.h  Input_mixed_before_compile.h  LDMTree.cpp  LDMTree.h  Makevars.in  ModelTag.h  ParallelIntervalSimulation.cpp  ParallelIntervalSimulation.h  RStochLib.cpp  Random.h  SSADirectSerial.cpp  SSA_ConstantTime.h  SSA_ConstantTime.ipp  SSA_LDM.h  SSA_LDM.ipp  SSA_NRM.h  SSA_NRM.ipp  StandardDriverOutput.h  StandardDriverTypes.h  StandardDriverUtilities.cpp  StandardDriverUtilities.h  StandardEventHandler.h  StatsOutput.h  StochLib.h  StringCalculator.h  SupportedFunctions.h  TauLeapingExplicitAdaptive.h  TauLeapingExplicitAdaptive.ipp  (+12 more)
(+1 files in other folders)
